--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             
                         <div class="portfolio-layer">
                             <h4 style="color: rgb(6, 5, 5);">"MaidOnCall: A Web-Based Platform for Effortless Maid Booking"</h4>
-                            <p style="color: rgb(6, 5, 5);">Introducing our innovative and convenient web-based platform that simplifies the process of booking skilled maids for a wide range of household activities such as cooking,house cleaning..</p>
+                            <p style="color: rgb(6, 5, 5);"> web-based platform that simplifies the process of booking skilled maids for a wide range of household activities such house cleaning..</p>
                         <a href="https://maidoncallfor-effortlessmaidbooking.000webhostapp.com/"><i class='bx bx-link-external' ></i></a>         
                         </div>
                     </div> 
@@ -149,7 +149,7 @@
  
         <h2 class="heading">Contact <span>Me!</span></h2>
 
-        <form action="#" >
+        <form action="contact.php" method="post" >
             <div class="input-box">
              <input type="text" placeholder="Full name">
              <input type="email" placeholder="Email Address">
